--- a/_posts/2018-01-28-test.md
+++ b/_posts/2018-01-28-test.md
@@ -36,11 +36,17 @@ python code block:
 '''python
     import numpy as np
 
-    def test_function(x, y)
-        z = np.sum(x,y)
-        return z
+    def test_function(x, y):
+     z = np.sum(x,y)
+     return z
 '''
 
+R code block:
+'''r
+library(tidyverse)
+df <- read_csv("file.csv)
+head(df)
+'''
 Image
 
 Math
