--- a/_posts/2019-01-28-test.md
+++ b/_posts/2019-01-28-test.md
@@ -10,4 +10,10 @@ mathjax: "true"
 
 # Creating The Model
 
+
 For our project, we did a Monte Carlo analysis of RxPlus, Inc. is a Midwestern pharmaceutical company that discovered a potential drug breakthrough in the laboratory and needs to decide whether to go forward to conduct clinical trials and seeks FDA approval to market the drug. Total R&D costs are expected to reach $800 million, and the cost of clinical trials will be about $150 million. The current market size is estimated to be 2 million people and is expected to grow at a rate of 3.5% each year. In the first year, the company estimates gaining an 8% market share, which is anticipated to grow by 25% each year. It is difficult to estimate beyond five years because new competitors are expected to be entering the market. A monthly prescription is anticipated to generate revenue of $140 while incurring variable costs of $40. A discount rate of 8% is assumed for computing the net present value of the project. The company needs to know how long it will take to recover its fixed expenses and the net present value over the first five years.
+
+
+First, the parameters were defined for the spreadsheet model. The certain inputs for the model were the discount rate, monthly revenue, monthly variable cost, and the first year market share. For the uncertain inputs, they were market size, R&D cost, Clinical trial cost, annual market growth factor, and annual market share growth rate. For each of the uncertain input the average, minimum, maximum, standard deviation, and distribution type were determined where applicable.
+
+<img src="{{ site.url }}{{ site.baseurl }}/images/MonteCarlo/MonteCarlo1.png" alt="Test">
