--- a/_posts/2019-01-28-test.md
+++ b/_posts/2019-01-28-test.md
@@ -17,3 +17,6 @@ For our project, we did a Monte Carlo analysis of RxPlus, Inc. is a Midwestern p
 First, the parameters were defined for the spreadsheet model. The certain inputs for the model were the discount rate, monthly revenue, monthly variable cost, and the first year market share. For the uncertain inputs, they were market size, R&D cost, Clinical trial cost, annual market growth factor, and annual market share growth rate. For each of the uncertain input the average, minimum, maximum, standard deviation, and distribution type were determined where applicable.
 
 <img src="{{ site.url }}{{ site.baseurl }}/images/MonteCarlo/MonteCarlo1.png" alt="Test">
+
+
+you can [get the PDF]({{ site.url }}/assets/Syllabus.pdf) directly.
