Updated MonteCarlo Post and Test Post

--- a/_posts/2018-01-28-test.md
+++ b/_posts/2018-01-28-test.md
@@ -54,3 +54,5 @@ Math
 $$z=x+y$$
 
 you can [get the excelsheet]({{ site.url }}/assets/MonteCarloProject.xlsx) directly.
+
+you can [get the PDF]({{ site.url }}/assets/Syllabus.pdf) directly.
