--- a/_posts/2018-01-28-test.md
+++ b/_posts/2018-01-28-test.md
@@ -1,7 +1,7 @@
 ---
-title: "Test Post"
+title: "Test Post1"
 date: 2018-01-28
-tags: [test1, test2, test3]
+tags: [Test]
 header:
     image: "/images/"
 excerpt: "This is the excerpt"
