Website Major Update

--- a/_posts/2018-01-29-TestPost.md
+++ b/_posts/2018-01-29-TestPost.md
@@ -1,6 +1,6 @@
 ---
 title: "Test Post1"
-date: 2018-01-28
+date: 2018-01-29
 tags: [Test]
 header:
     image: "/images/"
@@ -53,6 +53,7 @@ Math
 
 $$z=x+y$$
 
-you can [get the excelsheet]({{ site.url }}/assets/MonteCarloProject.xlsx) directly.
 
 you can [get the PDF]({{ site.url }}/assets/Syllabus.pdf) directly.
+
+### <img src="{{ site.url }}{{ site.baseurl }}/images/output_7_2.png" alt="Test">
