--- a/_posts/2018-07-02-Legos.md
+++ b/_posts/2018-07-02-Legos.md
@@ -2,7 +2,7 @@
 title: "Exploring Legos"
 date: 2018-07-02
 tags: [Jupyter, Python]
-excerpt: "This is the excerpt"
+excerpt: "In this project we explore trends in themes, parts and colors of legos"
 mathjax: "true"
 toc: "true"
 
@@ -14,9 +14,6 @@ toc: "true"
 <p><img src="https://s3.amazonaws.com/assets.datacamp.com/projects/lego/lego-bricks.jpeg" alt="lego"></p>
 
 
-```python
-# Nothing to do here
-```
 
 ## Reading Data
 <p>This comprehensive database of lego blocks is provided by <a href="https://rebrickable.com/downloads/">Rebrickable</a>. The data is available as csv files and the schema is shown below.</p>
