--- a/_posts/2018-06-28-Linux.md
+++ b/_posts/2018-06-28-Linux.md
@@ -2,7 +2,7 @@
 title: "Evolution of Linux"
 date: 2018-06-28
 tags: [Juypter, Python]
-excerpt: "This project looks into the commit history of Linux"
+excerpt: "This project looks into the development history by exploring its Git repository history"
 mathjax: "true"
 toc: "true"
 
